--- a/README.qmd
+++ b/README.qmd
@@ -5,7 +5,7 @@ format: gfm
 jupyter: python3
 ---
 
-[![PyPI](https://img.shields.io/pypi/v/python-allib)](https://pypi.org/project/instancelib/) [![Python_version](https://img.shields.io/badge/python-3.8%20%7C%203.9%20%7C%203.10%20%7C%203.11-blue)](https://pypi.org/project/instancelib/) [![License](https://img.shields.io/pypi/l/python-allib)](https://www.gnu.org/licenses/lgpl-3.0.en.html) [![DOI](https://zenodo.org/badge/10869682.svg)](https://zenodo.org/badge/latestdoi/10869682)
+[![PyPI](https://img.shields.io/pypi/v/python-allib)](https://pypi.org/project/python-allib/) [![Python_version](https://img.shields.io/badge/python-3.8%20%7C%203.9%20%7C%203.10%20%7C%203.11-blue)](https://pypi.org/project/instancelib/) [![License](https://img.shields.io/pypi/l/python-allib)](https://www.gnu.org/licenses/lgpl-3.0.en.html)[![DOI](https://zenodo.org/badge/414780120.svg)](https://zenodo.org/doi/10.5281/zenodo.10869682)
 
 ------------------------------------------------------------------------
 
